--- a/css/main.css
+++ b/css/main.css
@@ -1957,7 +1957,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #49ffff;
+  background: #fbc6aa;
 }
 .links-of-blogroll {
   font-size: 13px;
