--- a/HexoJiadongpo/public/css/main.css
+++ b/HexoJiadongpo/public/css/main.css
@@ -1957,7 +1957,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #a7901d;
+  background: #ffb345;
 }
 .links-of-blogroll {
   font-size: 13px;
